Adding command objects, type converters, tests (TDD), and service method